[Ayush] Add: Python program to create and display a DataFrame from a specified dictionary data which has the index labels.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -306,6 +306,56 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c6db468-293a-4882-9f24-34fb487cb87c",
+   "metadata": {},
+   "source": [
+    "## Q5\n",
+    "Python program to create and display a DataFrame from a specified dictionary data which has the index labels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6a8d1a84-7de7-4947-9b74-cfc131a6333a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal dictionary is:\n",
+      "{'Name': ['Ayush', 'Deven', 'Shiv', 'Prayag'], 'Location': ['Sanpada', 'Panvel', 'Kamothe', 'Panvel'], 'Language': ['Python', 'Java', 'Python', 'JavaScript'], 'Company': ['Amazon', 'Microsoft', 'Oracle', 'JP Morgan']}\n",
+      "\n",
+      "The pandas dataframe is \n",
+      "\n",
+      "     Name Location    Language    Company\n",
+      "0   Ayush  Sanpada      Python     Amazon\n",
+      "1   Deven   Panvel        Java  Microsoft\n",
+      "2    Shiv  Kamothe      Python     Oracle\n",
+      "3  Prayag   Panvel  JavaScript  JP Morgan\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    student_dict = {\n",
+    "        'Name': ['Ayush', 'Deven', 'Shiv', 'Prayag'],\n",
+    "        'Location': ['Sanpada', 'Panvel', 'Kamothe', 'Panvel'],\n",
+    "        'Language': ['Python', 'Java', 'Python', 'JavaScript'],\n",
+    "        'Company': ['Amazon', 'Microsoft', 'Oracle', 'JP Morgan']\n",
+    "    }\n",
+    "    \n",
+    "    print(f\"The orignal dictionary is:\\n{student_dict}\")\n",
+    "    student_df = pd.DataFrame(student_dict)\n",
+    "    print(f\"\\nThe pandas dataframe is \\n\\n{student_df}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
