[Ayush] Refactor: Python program to create and display a DataFrame from a specified dictionary data which has the index labels.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "6a8d1a84-7de7-4947-9b74-cfc131a6333a",
    "metadata": {},
    "outputs": [
@@ -331,25 +331,26 @@
       "\n",
       "The pandas dataframe is \n",
       "\n",
-      "     Name Location    Language    Company\n",
-      "0   Ayush  Sanpada      Python     Amazon\n",
-      "1   Deven   Panvel        Java  Microsoft\n",
-      "2    Shiv  Kamothe      Python     Oracle\n",
-      "3  Prayag   Panvel  JavaScript  JP Morgan\n"
+      "        Name Location    Language    Company\n",
+      "A100   Ayush  Sanpada      Python     Amazon\n",
+      "A102   Deven   Panvel        Java  Microsoft\n",
+      "A103    Shiv  Kamothe      Python     Oracle\n",
+      "A104  Prayag   Panvel  JavaScript  JP Morgan\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
-    "    student_dict = {\n",
-    "        'Name': ['Ayush', 'Deven', 'Shiv', 'Prayag'],\n",
-    "        'Location': ['Sanpada', 'Panvel', 'Kamothe', 'Panvel'],\n",
-    "        'Language': ['Python', 'Java', 'Python', 'JavaScript'],\n",
-    "        'Company': ['Amazon', 'Microsoft', 'Oracle', 'JP Morgan']\n",
-    "    }\n",
-    "    \n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael',\n",
+    "    'Matthew', 'Laura', 'Kevin', 'Jonas'],\n",
+    "    'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "    'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "    'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']}\n",
+    "\n",
+    "    index_labels = ['A100', 'A102', 'A103', 'A104']\n",
     "    print(f\"The orignal dictionary is:\\n{student_dict}\")\n",
-    "    student_df = pd.DataFrame(student_dict)\n",
+    "    student_df = pd.DataFrame(student_dict, index = index_labels)\n",
     "    print(f\"\\nThe pandas dataframe is \\n\\n{student_df}\")\n",
     "\n",
     "\n",
