[Ayush] Add: Python program to display a summary of the basic information about a specified Data Frame and its data.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "6a8d1a84-7de7-4947-9b74-cfc131a6333a",
    "metadata": {},
    "outputs": [
@@ -326,32 +326,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The orignal dictionary is:\n",
-      "{'Name': ['Ayush', 'Deven', 'Shiv', 'Prayag'], 'Location': ['Sanpada', 'Panvel', 'Kamothe', 'Panvel'], 'Language': ['Python', 'Java', 'Python', 'JavaScript'], 'Company': ['Amazon', 'Microsoft', 'Oracle', 'JP Morgan']}\n",
       "\n",
       "The pandas dataframe is \n",
       "\n",
-      "        Name Location    Language    Company\n",
-      "A100   Ayush  Sanpada      Python     Amazon\n",
-      "A102   Deven   Panvel        Java  Microsoft\n",
-      "A103    Shiv  Kamothe      Python     Oracle\n",
-      "A104  Prayag   Panvel  JavaScript  JP Morgan\n"
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n",
+      "\n",
+      "The summary of dataframe is \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
     "    exam_data = {\n",
-    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael',\n",
-    "    'Matthew', 'Laura', 'Kevin', 'Jonas'],\n",
-    "    'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
-    "    'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
-    "    'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']}\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
     "\n",
-    "    index_labels = ['A100', 'A102', 'A103', 'A104']\n",
-    "    print(f\"The orignal dictionary is:\\n{student_dict}\")\n",
-    "    student_df = pd.DataFrame(student_dict, index = index_labels)\n",
-    "    print(f\"\\nThe pandas dataframe is \\n\\n{student_df}\")\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    print(f\"\\nThe pandas dataframe is \\n\\n{exam_data_df}\")\n",
+    "    print(f\"\\nThe summary of dataframe is \\n\\n{exam_data_df}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ce89be3-3f70-4a58-8d57-758ae02d14cb",
+   "metadata": {},
+   "source": [
+    "## Q6\n",
+    "Python program to display a summary of the basic information about a specified Data Frame and its data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "54f5e88e-3878-4839-8cc5-670ed94d4f69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The summary of dataframe is: \n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 10 entries, a to j\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   name      10 non-null     object \n",
+      " 1   score     8 non-null      float64\n",
+      " 2   attempts  10 non-null     int64  \n",
+      " 3   qualify   10 non-null     object \n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 400.0+ bytes\n",
+      "\n",
+      "None,\n",
+      "\n",
+      "DataFrame Statistics:\n",
+      "\n",
+      "           score   attempts\n",
+      "count   8.000000  10.000000\n",
+      "mean   13.562500   1.900000\n",
+      "std     4.693746   0.875595\n",
+      "min     8.000000   1.000000\n",
+      "25%     9.000000   1.000000\n",
+      "50%    13.500000   2.000000\n",
+      "75%    17.125000   2.750000\n",
+      "max    20.000000   3.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    print(\"\\nThe summary of dataframe is: \\n\\n\")\n",
+    "    print(f\"\\n{exam_data_df.info()},\\n\\nDataFrame Statistics:\\n\\n{exam_data_df.describe()}\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
