[Ayush] Add: Python program to select the 'name' and 'score' columns from the following DataFrame.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -494,6 +494,61 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e583326-2d98-4155-bdf2-c25978623248",
+   "metadata": {},
+   "source": [
+    "## Q8\n",
+    "Python program to select the 'name' and 'score' columns from the following DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7fbb8d86-2f18-4e45-a888-7d77e5868c40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The 'name' and 'score' column of dataframe is: \n",
+      "\n",
+      "        name  score\n",
+      "a  Anastasia   12.5\n",
+      "b       Dima    9.0\n",
+      "c  Katherine   16.5\n",
+      "d      James    NaN\n",
+      "e      Emily    9.0\n",
+      "f    Michael   20.0\n",
+      "g    Matthew   14.5\n",
+      "h      Laura    NaN\n",
+      "i      Kevin    8.0\n",
+      "j      Jonas   19.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    print(f\"\\nThe 'name' and 'score' column of dataframe is: \\n\\n{exam_data_df[['name', 'score']]}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
