[Ayush] Add: Python program to select the specified columns and rows from a given dataframe.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter number of elements in the first array:  5\n",
@@ -261,7 +261,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter 1 power:  2\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "id": "54f5e88e-3878-4839-8cc5-670ed94d4f69",
    "metadata": {},
    "outputs": [
@@ -544,6 +544,57 @@
     "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
     "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
     "    print(f\"\\nThe 'name' and 'score' column of dataframe is: \\n\\n{exam_data_df[['name', 'score']]}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58b34941-16e4-45f3-a3c6-80f52d7c4908",
+   "metadata": {},
+   "source": [
+    "## Q9\n",
+    "Python program to select the specified columns and rows from a given dataframe.<br>\n",
+    "Select 'name' and 'score' columns in rows 1, 3, 5, 6 from the following data frame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "964af16e-f8b4-48d3-a378-e17f27a9d29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The 'name' and 'score' column of dataframe is: \n",
+      "\n",
+      "      name  score\n",
+      "b     Dima    9.0\n",
+      "d    James    NaN\n",
+      "f  Michael   20.0\n",
+      "g  Matthew   14.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    result = exam_data_df.loc[['b', 'd', 'f', 'g'], ['name', 'score']]\n",
+    "    print(f\"\\nThe 'name' and 'score' column of dataframe is: \\n\\n{result}\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
