--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -649,6 +649,65 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e62177bf",
+   "metadata": {},
+   "source": [
+    "# Q11\n",
+    "Python program to count the number of rows and columns of a DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "797143fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe:\n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n",
+      "\n",
+      "\n",
+      "The dataframe has 10 rows and 4 columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    row, column = exam_data_df.shape[0], exam_data_df.shape[1]\n",
+    "    print(f\"Dataframe:\\n\\n{exam_data_df}\\n\")\n",
+    "    print(f\"\\nThe dataframe has {row} rows and {column} columns\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
