--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "a7ccba16",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The 'name' and 'score' column of dataframe is: \n",
+      "The dataframe where attemps is greater than two is: \n",
       "\n",
       "      name  score  attempts qualify\n",
       "b     Dima    9.0         3      no\n",
@@ -643,7 +643,7 @@
     "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
     "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
     "    result = exam_data_df.loc[exam_data_df['attempts'] > 2]\n",
-    "    print(f\"\\nThe 'name' and 'score' column of dataframe is: \\n\\n{result}\")\n",
+    "    print(f\"\\nThe dataframe where attemps is greater than two is: \\n\\n{result}\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -703,6 +703,54 @@
     "    row, column = exam_data_df.shape[0], exam_data_df.shape[1]\n",
     "    print(f\"Dataframe:\\n\\n{exam_data_df}\\n\")\n",
     "    print(f\"\\nThe dataframe has {row} rows and {column} columns\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e85e2021",
+   "metadata": {},
+   "source": [
+    "## Q12\n",
+    "Python program to select the rows where the score is missing, i.e. is NaN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f67c2768",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The dataframe where score is NaN: \n",
+      "\n",
+      "    name  score  attempts qualify\n",
+      "d  James    NaN         3      no\n",
+      "h  Laura    NaN         1      no\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    result = exam_data_df.loc[exam_data_df['score'].isnull()]\n",
+    "    print(f\"\\nThe dataframe where score is NaN: \\n\\n{result}\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
