--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -804,6 +804,76 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be12f49d",
+   "metadata": {},
+   "source": [
+    "## Q14\n",
+    "Python program to change the score in row 'd' to 11.5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4c9a8de1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal dataframe is: \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n",
+      "\n",
+      "The updated dataframe is: \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James   11.5         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    print(f\"The orignal dataframe is: \\n\\n{exam_data_df}\")\n",
+    "    exam_data_df.loc['d', 'score'] = 11.5\n",
+    "    print(f\"\\nThe updated dataframe is: \\n\\n{exam_data_df}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
