[Ayush] Add: Python program to append a new row 'k' to data frame with given values for each column.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "id": "824b6b7a",
    "metadata": {},
    "outputs": [
@@ -931,7 +931,7 @@
     "    for attempt in exam_data_df['attempts']:\n",
     "        total_attempts += attempt\n",
     "    \n",
-    "    print(f\"\\nThe sum of attempts of all student is: {exam_data_df['attempts'].sum()}\")\n",
+    "    print(f\"\\nThe sum of attempts of all student is: {total_attempts}\")\n",
     " \n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -993,6 +993,87 @@
     "    print(f\"The mean score of all student is {mean_score}\")\n",
     "\n",
     " \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6efe67a",
+   "metadata": {},
+   "source": [
+    "## Q17\n",
+    "Python program to append a new row 'k' to data frame with given values for each column.<br>\n",
+    "Now delete the new row and return the original DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "372646f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataframe after adding new row: \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n",
+      "k      Ayush   20.0         1     yes\n",
+      "\n",
+      "The orignal dataframe after deleting row 'k': \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    \n",
+    "    new_row = {\n",
+    "        'name': 'Ayush',\n",
+    "        'score': 20,\n",
+    "        'attempts': 1,\n",
+    "        'qualify': 'yes'\n",
+    "    }\n",
+    "\n",
+    "    exam_data_df.loc['k'] = new_row\n",
+    "    print(f\"The dataframe after adding new row: \\n\\n{exam_data_df}\\n\")\n",
+    "\n",
+    "    exam_data_df = exam_data_df.drop('k')\n",
+    "    print(f\"The orignal dataframe after deleting row 'k': \\n\\n{exam_data_df}\\n\")\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
