[Ayush] Add: Python program to sort the DataFrame first by 'name' in descending order, then by 'score' in ascending order.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "id": "372646f8",
    "metadata": {},
    "outputs": [
@@ -1069,11 +1069,91 @@
     "        'qualify': 'yes'\n",
     "    }\n",
     "\n",
+    "    # new_row = pd.DataFrame(['Ayush', 20, 1, 'yes'], columns=exam_data_df.columns, index = 'k')\n",
+    "    # exam_data_df = pd.concat(exam_data_df, new_row)\n",
+    "\n",
     "    exam_data_df.loc['k'] = new_row\n",
     "    print(f\"The dataframe after adding new row: \\n\\n{exam_data_df}\\n\")\n",
     "\n",
     "    exam_data_df = exam_data_df.drop('k')\n",
     "    print(f\"The orignal dataframe after deleting row 'k': \\n\\n{exam_data_df}\\n\")\n",
+    "\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc29203",
+   "metadata": {},
+   "source": [
+    "## Q18\n",
+    "Python program to sort the DataFrame first by 'name' in descending order, then by 'score' in ascending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "83a12fa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe sorted in descending order by 'name': \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "j      Jonas   19.0         1     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "b       Dima    9.0         3      no\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "\n",
+      "Dataframe sorted in ascending order by 'score': \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "i      Kevin    8.0         2      no\n",
+      "e      Emily    9.0         2      no\n",
+      "b       Dima    9.0         3      no\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "c  Katherine   16.5         2     yes\n",
+      "j      Jonas   19.0         1     yes\n",
+      "f    Michael   20.0         3     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "d      James    NaN         3      no\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "\n",
+    "    # sort by name in descending\n",
+    "    exam_data_df = exam_data_df.sort_values(by='name', ascending=False)\n",
+    "    print(f\"Dataframe sorted in descending order by 'name': \\n\\n{exam_data_df}\")\n",
+    "\n",
+    "    # sort by score in ascending\n",
+    "    exam_data_df = exam_data_df.sort_values(by='score', ascending=True)\n",
+    "    print(f\"\\nDataframe sorted in ascending order by 'score': \\n\\n{exam_data_df}\")\n",
+    "\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
