[Ayush] Add: Python program to insert a new column in existing DataFrame.

--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -1303,6 +1303,92 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6c87041",
+   "metadata": {},
+   "source": [
+    "# Q21\n",
+    "Python program to insert a new column in existing DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "34882333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal dataframe is: \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n",
+      "\n",
+      "The updated dataframe is: \n",
+      "\n",
+      "        name  score  attempts qualify    address\n",
+      "a  Anastasia   12.5         1     yes     Mumbai\n",
+      "b       Dima    9.0         3      no      Delhi\n",
+      "c  Katherine   16.5         2     yes  Bangalore\n",
+      "d      James    NaN         3      no  Hyderabad\n",
+      "e      Emily    9.0         2      no    Chennai\n",
+      "f    Michael   20.0         3     yes    Kolkata\n",
+      "g    Matthew   14.5         1     yes  Ahmedabad\n",
+      "h      Laura    NaN         1      no       Pune\n",
+      "i      Kevin    8.0         2      no      Surat\n",
+      "j      Jonas   19.0         1     yes     Jaipur\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    print(f\"The orignal dataframe is: \\n\\n{exam_data_df}\\n\")\n",
+    "\n",
+    "    # Method 1 by creating dictionary\n",
+    "    # new_column_address = {\n",
+    "    #     'address': [\"Mumbai\", \"Delhi\", \"Bangalore\", \"Hyderabad\", \"Chennai\", \"Kolkata\",\n",
+    "    #                 \"Ahmedabad\", \"Pune\", \"Surat\", \"Jaipur\"]\n",
+    "    # }\n",
+    "    # exam_data_df = exam_data_df.assign(**new_column_address)\n",
+    "\n",
+    "\n",
+    "    address = [\"Mumbai\", \"Delhi\", \"Bangalore\", \"Hyderabad\", \"Chennai\", \"Kolkata\",\n",
+    "                    \"Ahmedabad\", \"Pune\", \"Surat\", \"Jaipur\"]\n",
+    "    # Method 2\n",
+    "    # exam_data_df['Address'] = address \n",
+    "\n",
+    "    # Method 3\n",
+    "    exam_data_df.loc[:,'address'] = address\n",
+    "    print(f\"The updated dataframe is: \\n\\n{exam_data_df}\\n\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
