--- a/Pandas_Programs/pandas_programs.ipynb
+++ b/Pandas_Programs/pandas_programs.ipynb
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "id": "34882333",
    "metadata": {},
    "outputs": [
@@ -1384,6 +1384,76 @@
     "    # Method 3\n",
     "    exam_data_df.loc[:,'address'] = address\n",
     "    print(f\"The updated dataframe is: \\n\\n{exam_data_df}\\n\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bfb8647",
+   "metadata": {},
+   "source": [
+    "## Q22\n",
+    "Python program to iterate over rows in a DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "d3167263",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The orignal dataframe is: \n",
+      "\n",
+      "        name  score  attempts qualify\n",
+      "a  Anastasia   12.5         1     yes\n",
+      "b       Dima    9.0         3      no\n",
+      "c  Katherine   16.5         2     yes\n",
+      "d      James    NaN         3      no\n",
+      "e      Emily    9.0         2      no\n",
+      "f    Michael   20.0         3     yes\n",
+      "g    Matthew   14.5         1     yes\n",
+      "h      Laura    NaN         1      no\n",
+      "i      Kevin    8.0         2      no\n",
+      "j      Jonas   19.0         1     yes\n",
+      "\n",
+      "Iterating the rows....\n",
+      "a, Anastasia, 12.5, 1, yes\n",
+      "b, Dima, 9.0, 3, no\n",
+      "c, Katherine, 16.5, 2, yes\n",
+      "d, James, nan, 3, no\n",
+      "e, Emily, 9.0, 2, no\n",
+      "f, Michael, 20.0, 3, yes\n",
+      "g, Matthew, 14.5, 1, yes\n",
+      "h, Laura, nan, 1, no\n",
+      "i, Kevin, 8.0, 2, no\n",
+      "j, Jonas, 19.0, 1, yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    exam_data = {\n",
+    "        'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', \n",
+    "                 'Laura', 'Kevin', 'Jonas'],\n",
+    "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
+    "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']\n",
+    "    }\n",
+    "\n",
+    "    index_labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "    exam_data_df = pd.DataFrame(exam_data, index = index_labels)\n",
+    "    print(f\"The orignal dataframe is: \\n\\n{exam_data_df}\\n\")\n",
+    "\n",
+    "    print(\"Iterating the rows....\")\n",
+    "    for index, row in exam_data_df.iterrows():\n",
+    "        print(index, row['name'], row['score'], row['attempts'], row['qualify'], sep= \", \")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
