[Ayush] Refactor: Python program to draw line charts of the financial data of Alphabet Inc. between October 3, 2016 to October 7, 2016.

--- a/Matplotlib_Programs/matplotlib_programs.ipynb
+++ b/Matplotlib_Programs/matplotlib_programs.ipynb
@@ -301,6 +301,14 @@
    ],
    "source": [
     "def plot_financial_data(data, xlabel, ylabel):\n",
+    "    \"\"\"\n",
+    "    Description:\n",
+    "        This function plots the line chart as per labels\n",
+    "    Parameters:\n",
+    "        xlabel, ylabel: Apprpriate column/label name\n",
+    "    Return:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    # Plotting the financial data\n",
     "    plt.figure(figsize=(10, 4))\n",
     "    plt.plot(data[xlabel], data[ylabel], label=ylabel, marker='o', c = '#000000')\n",
